chore: Clean up project structure
Organization improvements:
- Moved all documentation to docs/
  - QUICKSTART.md, SETUP.md, WHISPER_FEATURE.md, CONTRIBUTING.md
- Archived all RCA files to archive/rca/
- Deleted samples/ directory (510MB test video)
- Deleted empty testing/ directory
- Updated .gitignore to prevent future clutter
  - Added testing/ and samples/ directories
  - Made video file patterns global (*.mov, *.mp4, *.mkv)

Root directory now contains only:
- Essential config files
- Top-level docs (README, CHANGELOG, LICENSE)
- Source directories (src, src-tauri, docs, archive, tests)

Much cleaner and more professional structure.

--- a/.gitignore
+++ b/.gitignore
@@ -53,14 +53,16 @@ Thumbs.db
 *.AppImage
 
 # Logs and debugging
+logs/
 logs/*.log
 logs/*.txt
 tests/output/
-rca/*.log
 
-# Large test files
-samples/*.mov
-samples/*.mp4
-samples/*.mkv
-samples/*_temp_audio.mp3
-samples/*_Clips/
+# Testing and samples
+testing/
+samples/
+*.mov
+*.mp4
+*.mkv
+*_temp_audio.mp3
+*_Clips/
